--- a/HTML/Chickens.html
+++ b/HTML/Chickens.html
@@ -21,7 +21,7 @@
 
     <h2>Etymology</h2>
     <p>According to Merriam-Webster, the term "rooster" (i.e. a roosting bird) originated in the mid- or late 18th
-        century as a euphemism to avoid the sexual connotation of the original English "cock",[20][21][22] and is widely
+        century as a euphemism to avoid the sexual connotation of the original English "cock",<sup><a href="https://en.wikipedia.org/wiki/Chicken#cite_note-21">[20]</a><a href="https://en.wikipedia.org/wiki/Chicken#cite_note-Rawson-22">[21]</a><a href="https://en.wikipedia.org/wiki/Chicken#cite_note-Online_Etymology_Dictionary-23">[22]</a></sup> and is widely
         used throughout North America. "Roosting" is the action of perching aloft to sleep at night, which is done by
         both sexes.
 
