--- a/HTML/Chickens.html
+++ b/HTML/Chickens.html
@@ -15,13 +15,17 @@
         fowl.
         Rooster or cock is a term for an adult male bird. A younger male may be called a cockerel; a male that has been
         castrated is a capon. The adult female bird is called a hen. Originally raised for cockfighting or for special
-        ceremonies, chickens were not kept for food until the Hellenistic period (4th–2nd centuries BCE).[1][2] Humans
+        ceremonies, chickens were not kept for food until the Hellenistic period (4th–2nd centuries BCE).<sup>[1][2]</sup> Humans
         now keep chickens primarily as a source of food (consuming both their meat and eggs) and, less commonly, as
         pets.</p>
 
     <h2>Etymology</h2>
     <p>According to Merriam-Webster, the term "rooster" (i.e. a roosting bird) originated in the mid- or late 18th
-        century as a euphemism to avoid the sexual connotation of the original English "cock",<sup><a href="https://en.wikipedia.org/wiki/Chicken#cite_note-21">[20]</a><a href="https://en.wikipedia.org/wiki/Chicken#cite_note-Rawson-22">[21]</a><a href="https://en.wikipedia.org/wiki/Chicken#cite_note-Online_Etymology_Dictionary-23">[22]</a></sup> and is widely
+        century as a euphemism to avoid the sexual connotation of the original English "cock",<sup><a
+                href="https://en.wikipedia.org/wiki/Chicken#cite_note-21">[20]</a><a
+                href="https://en.wikipedia.org/wiki/Chicken#cite_note-Rawson-22">[21]</a><a
+                href="https://en.wikipedia.org/wiki/Chicken#cite_note-Online_Etymology_Dictionary-23">[22]</a></sup> and
+        is widely
         used throughout North America. "Roosting" is the action of perching aloft to sleep at night, which is done by
         both sexes.
 
@@ -48,7 +52,7 @@
     </ol>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Rooster_portrait2.jpg/300px-Rooster_portrait2.jpg"
         alt="Desi Cookad">
-        <!-- By anchor tag we can navigate to another page-->
+    <!-- By anchor tag we can navigate to another page-->
     <a href="hallo_world.html">About Author</a>
 </body>
 
